--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
     id "nu.studer.jooq" version "7.1"
     id 'org.liquibase.gradle' version '2.2.0'
+    id 'com.diffplug.spotless' version '6.25.0'
 }
 
 // Read .env file
@@ -57,6 +58,28 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+spotless {
+    java {
+        toggleOffOn()
+        prettier(
+                [
+                        "prettier": "3.0.3",
+                        "prettier-plugin-java": "2.3.0"
+                ]
+        ).config(
+                [
+                        "parser": "java",
+                        "printWidth": 100,
+                        "tabWidth": 4,
+                        "plugins": ["prettier-plugin-java"]
+                ]
+        )
+        removeUnusedImports()
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
+}
+
 jooq {
     version = '3.17.0'
 
@@ -102,3 +125,4 @@ liquibase {
 }
 
 generateJooq.dependsOn update
+compileJava.dependsOn 'spotlessApply'
