--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,9 @@
 # Server
 SERVER_PORT=8080#
 
+# Allow CORS from frontend
+FRONTEND_BASE_URL=http://localhost:3000
+
 # Database
 POSTGRES_BASE_URL=localhost:5432
 POSTGRES_DATABASE=database
