--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tremor/react": "^3.15.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "framer-motion": "^6.5.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.3",
     "three": "^0.118.3",
+    "victory": "^37.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
