--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1"
   }
